--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
                 </ul>
             </div>
 
-            <div class="col-10 px-12">
+            <div class="col-10 ">
                 <div class="row">
                     <div class=" col-4 col-sm-2">
                         
